--- a/.gitignore
+++ b/.gitignore
@@ -14,16 +14,16 @@ local.settings.json
 *.userprefs
 
 # Build results
-[Dd]ebug/
-[Dd]ebugPublic/
-[Rr]elease/
+**/[Dd]ebug/
+**/[Dd]ebugPublic/
+**/[Rr]elease/
 [Rr]eleases/
 x64/
 x86/
 bld/
-[Bb]in/
-[Oo]bj/
-[Ll]og/
+**/[Bb]in/
+**/[Oo]bj/
+**/[Ll]og/
 
 # Visual Studio 2015 cache/options directory
 .vs/
