Fixed project references

--- a/Movielens.API/Movielens.API.csproj
+++ b/Movielens.API/Movielens.API.csproj
@@ -18,8 +18,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Movielens.Application\Movielens.Application.csproj" />
+    <ProjectReference Include="..\Movielens.Contracts\Movielens.Contracts.csproj" />
     <ProjectReference Include="..\Movielens.Data\Movielens.Data.csproj" />
   </ItemGroup>
+
 
   <ItemGroup>
     <Content Update="Fakes\movies.json">
