--- a/Movielens.API/Movielens.API.csproj
+++ b/Movielens.API/Movielens.API.csproj
@@ -29,4 +29,8 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <InternalsVisibleTo Include="Movielens.API.IntegrationTest" />
+  </ItemGroup>
+
 </Project>
